--- a/EVENTLISTENER/event.html
+++ b/EVENTLISTENER/event.html
@@ -6,8 +6,20 @@
     <title>Document</title>
 </head>
 <body>
+    <h2 id="myBox">Welcome</h2>
+
     <p id="text">Hover</p>
-    <button id="btn">Click Me</button>
+    
+    <button id="greetBtn">Click</button><br>
+
+    <br><button id="btn">Click Me</button><br>
+
+    <br><button id="myDiv">Button</button><br>
+
+    <br><button id="btn1">Click Here</button><br>
+
+    <br><button id="remove">Remove Listener</button>
+
     <script src="event.js"></script>
 </body>
 </html>
