--- a/ALLQUERYSELECTOR/allquery.html
+++ b/ALLQUERYSELECTOR/allquery.html
@@ -19,9 +19,9 @@
     <button class="btn">Three</button><br>
 
     <br>
-    <input type="checkbox" class="check" >Apple
-    <input type="checkbox" class="check" >Banana
-    <input type="checkbox" class="check" >Cherry
+    <input type="checkbox" class="check" value="Apple">Apple
+    <input type="checkbox" class="check" value="Banana" >Banana
+    <input type="checkbox" class="check" value="Cherry">Cherry
 
     <ul id="menu">
         <li>Home</li>
